adds header styling, adds bootstrap, replaces authentication data for facebook

--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,7 +1,13 @@
 <div class="navigation">
 	<nav id="custNav">
 		<ul class="myNav">
-			<li><%= link_to "Rendezvous", :home %></li>
+			<li><%= link_to "Rendezvous", :home, class: 'brand' %></li>
+			<% if current_user %>
+			<li><%= link_to "#{current_user.name}", users_path(current_user)%></li>
+			<li><%= link_to "Sign Out", :signout, class: 'btn facebook'%></li>
+			<% else %>
+			<li><%= link_to 'Sign in with facebook', "/auth/facebook", id: "sign_in", class: 'btn facebook' %></li>
+			<% end %>
 		</ul>
 	</nav>
 </div>
