--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -45,3 +45,11 @@ a.facebook {
 	margin-top: -5px;
 	float: right;
 }
+
+#footer {
+	text-align: center;
+}
+
+#footer > p {
+	font-weight: normal;
+}
