--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,4 +1,5 @@
+<hr />
 <div id="footer">
 	<p>Developed by Alex Egan</p>
-	<p><a href="https://github.com/AEgan/Rendezvous">Fork Me</a></p>
+	<a href="https://github.com/AEgan/Rendezvous"><%= image_tag('GitHub-Mark-32px.png', alt: "Fork Me" )%></a>
 </div>
