--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -1,5 +1,8 @@
-<p id="notice"><%= notice %></p>
-
+<div class='row'>
+	<div class='col-lg-12 col-md-12 col-sm-12'>
+		<p id="notice"><%= notice %></p>
+	</div>
+</div>
 <p>
   <strong>User:</strong>
   <%= @attendance.user_id %>
