--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,13 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Provider:</strong>
-  <%= @user.provider %>
-</p>
-
-<p>
-  <strong>Uid:</strong>
-  <%= @user.uid %>
-</p>
-
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
-
-<p>
-  <strong>Oauth token:</strong>
-  <%= @user.oauth_token %>
-</p>
-
-<p>
-  <strong>Oauth expires at:</strong>
-  <%= @user.oauth_expires_at %>
-</p>
+<div class='row'>
+  <div class='col-lg-12 col-md-12 col-sm-12'>
+    <p id="notice"><%= notice %></p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-8 col-sm-12">
+    <h1><%= @user.name %></h1>
+  </div>
+</div>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
