--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,12 @@
 <div class="row">
   <div class="col-lg-8 col-sm-12">
     <h1><%= @user.name %></h1>
+    <%= render 'created_events'%>
+  </div>
+  <div class='col-lg-4 col-sm-12'>
+    <%= render 'attended_events' %>
   </div>
 </div>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary' %> |
+<%= link_to 'Back', users_path, class: 'btn btn-default' %>
