--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -33,11 +33,11 @@
   </div>
   <div class="field">
     <%= f.label :start_time %><br>
-    <%= f.time_select :start_time %>
+    <%= f.datetime_select :start_time %>
   </div>
   <div class="field">
     <%= f.label :end_time %><br>
-    <%= f.time_select :end_time %>
+    <%= f.datetime_select :end_time %>
   </div>
   <div class="actions">
     <%= f.submit nil, class: 'btn btn-success' %>
