some style changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
+<h1>Welcome to Rendezvous</h1>
+<p>This project is still in development. <a href="https://github.com/AEgan/Rendezvous">Check it out here</a></p>
+<p>Spontaneous event planning.</p>
 <% if current_user %>
 	Welcome <strong><%= current_user.first_name %>
 <% else %>
