--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
 <div class="row">
   <div class="col-lg-8 col-sm-12">
     <h1><%= @user.name %></h1>
+    <%= image_tag @user.profile_picture %>
     <%= render 'created_events'%>
   </div>
   <div class='col-lg-4 col-sm-12'>
