--- a/app/views/events/_attendance_list.html.erb
+++ b/app/views/events/_attendance_list.html.erb
@@ -1,1 +1,23 @@
-<b>Attendance List goes here</b>
+<h2>Attendance List</h2>
+<% if @attendances.empty? %>
+	<b>No attendees yet</b>
+<% else %>
+	<table>
+		<thead>
+			<th>Name</th>
+			<th></th>
+		</thead>
+		<tbody>
+			<% @attendances.each do |attendance| %>
+				<tr>
+					<td><%= link_to attendance.user.name, user_path(attendance.user) %></td>
+					<% if current_user && attendance.user.id == current_user.id %>
+						<td>Some confirm button</td>
+					<% else %>
+						<td></td>
+					<% end %>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
+<% end %>
