styles time and fixes the look of a button

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,9 +15,9 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
-        <td><%= event.name %></td>
-        <td><%= event.start_time %></td>
-        <td><%= event.end_time %></td>
+        <td><%= link_to event.name, event %></td>
+        <td><%= time_stringify(event.start_time) %></td>
+        <td><%= time_stringify(event.end_time) %></td>
         <td><%= event.creator.name %></td>
         <td><%= link_to 'Show', event , class: "btn btn-primary btn-small" %></td>
         <% if current_user && current_user.id == event.user_id %>
