quick attend button in place. Needs some modification but for now it works

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,7 +31,8 @@
     </p>
   </div>
   <div class="col-lg-4 col-sm-12">
-    <%= render 'attendance_list' %>
+    <%= render 'attendance_list' %><br />
+    <%= render 'add_attendance' %>
   </div>
 </div>
 
