uses by_user scope in attendance list, styles attendance list

--- a/app/views/events/_attendance_list.html.erb
+++ b/app/views/events/_attendance_list.html.erb
@@ -2,7 +2,7 @@
 <% if @attendances.empty? %>
 	<b>No attendees yet</b>
 <% else %>
-	<table>
+	<table class="table table-bordered table-striped table-hover">
 		<thead>
 			<th>Name</th>
 			<th></th>
